OMG I FINALLY FIXED IT if you ever have a small problem with your code and have no idea why it's happening, just wait 2 weeks, come back to your project, realize you were stupid 2 weeks ago and fix it.